examples/macro-tests/tests/fail/02_service_rejects_payload.stderr
error: #[service] parameters must be framework-managed dependencies wrapped as Arc<T>, Arc<RwLock<T>>, or Arc<Mutex<T>>. Payload parameters are only supported by #[trigger].

         = help: Wrap service dependencies in Arc<T>, Arc<RwLock<T>>, or Arc<Mutex<T>>. If you intended to handle an event payload, use #[trigger] instead.

  --> tests/fail/02_service_rejects_payload.rs:10:34
   |
10 | pub async fn bad_payload_service(data: String) -> anyhow::Result<()> {
   |                                  ^^^^^^^^^^^^
